--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.1.0",
+    "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
+    "uuid": "^3.4.0",
+    "uuidv4": "^6.2.12",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
