Add a method to Delete books from the API

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -15,6 +16,7 @@
     "react-select": "^5.1.0",
     "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "uuid": "^3.4.0",
     "uuidv4": "^6.2.12",
     "web-vitals": "^1.0.1"
